# epup-translator-v2

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  config.yaml  instructions-traduction-epub.md  pyproject.toml
.github/workflows/: ci.yml
prompts/analysis/: 01_identification.md  02_cadre_narratif.md  03_ton_style.md  04_personnages.md  05_relations.md  06_registre_dialogues.md  07_glossaire.md  08_idiomes.md  09_references_culturelles.md  10_structure_texte.md  11_contraintes_grammaticales.md  12_coherence_stylistique.md  13_themes.md  14_sensibilite_contenu.md  15_notes_traduction.md
prompts/translation/: chapter_prompt.md  system_prompt.md
src/: __init__.py  analyzer.py  cache_manager.py  claude_client.py  epub_handler.py  epub_validator.py  main.py  models.py  prompt_builder.py  translator.py  utils.py
tests/: conftest.py  test_analyzer.py  test_cache_manager.py  test_epub_handler.py  test_integration.py  test_translator.py
